<resources>
    <string name="app_name">hw6</string>
    <string name="text">TEXT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0_00">0:00</string>
    <string name="_1">1</string>
    <string name="name">NAME</string>
    <string name="autor">AUTOR</string>
    <string name="talk_me_down">Talk Me Down</string>
    <string name="blue_neighbourhood">Blue Neighbourhood</string>
    <string name="now_playing">Now Playing</string>
</resources>