<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/img"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FirstFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_thin"
        android:textAlignment="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tv_nameM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/talk_me_down"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue_neighbourhood"
        android:textColor="@color/white"
        android:fontFamily="@font/abeezee"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"/>

</FrameLayout>